...
                            <constraint firstItem="ggp-WM-9pH" firstAttribute="leading" secondItem="Sdw-Vb-l7P" secondAttribute="leading" id="dti-kR-BvK"/>
                            <constraint firstAttribute="trailing" secondItem="ggp-WM-9pH" secondAttribute="trailing" id="jXO-9v-74t"/>
                            <constraint firstItem="ggp-WM-9pH" firstAttribute="top" secondItem="me9-IV-3pO" secondAttribute="bottom" id="pVS-JR-GZy"/>
                            <constraint firstItem="ggp-WM-9pH" firstAttribute="bottom" secondItem="pby-mq-XKC" secondAttribute="top" id="ugu-wn-62T"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Movies" id="cpj-LC-xy4">
                        <barButtonItem key="leftBarButtonItem" title="Genre" id="Ghh-Aj-oPm">
                            <connections>
                                <action selector="genreAction:" destination="0KK-iT-w09" id="mZI-Zb-Vw2"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="organize" id="2Zj-mu-qlG">
...
                            <constraint firstAttribute="trailing" secondItem="GIB-wL-wzG" secondAttribute="trailing" id="T5U-cS-0Km"/>
                            <constraint firstItem="GIB-wL-wzG" firstAttribute="bottom" secondItem="TgA-ZX-Y0F" secondAttribute="top" id="Wai-ob-D70"/>
                            <constraint firstItem="GIB-wL-wzG" firstAttribute="top" secondItem="c1T-fq-RHA" secondAttribute="bottom" id="Zug-Pc-mNM"/>
                            <constraint firstItem="GIB-wL-wzG" firstAttribute="leading" secondItem="FUg-um-N2a" secondAttribute="leading" id="u7N-Ys-K3z"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Featured" id="s34-TQ-j9D"/>
                    <connections>
                        <outlet property="tableView" destination="GIB-wL-wzG" id="xVG-J4-8Mt"/>
                        <segue destination="6At-tm-DiG" kind="show" identifier="showMovieDetailsFromFeatured" id="9vh-Nh-Wnx"/>
                        <segue destination="wVx-Wm-bVh" kind="show" identifier="showTVShowDetailsFromFeatured" id="IKB-Xb-dUm"/>
                        <segue destination="SIe-LV-vPe" kind="show" identifier="showPersonDetailsFromFeatured" id="J1e-ZT-Wu0"/>
                        <segue destination="di8-Zf-MMg" kind="show" identifier="showSeeAllFromFeatured" id="dIB-mH-JON"/>
...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ci-UP-NoW">
                                <rect key="frame" x="262" y="253" width="77" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="77" id="33D-VH-lGU"/>
                                </constraints>
                                <state key="normal" title="Skip Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="skipLoginAction:" destination="LWW-aB-g2m" eventType="touchUpInside" id="Wa8-Lh-jZv"/>
                                </connections>
                            </button>
...
                            <constraint firstAttribute="trailing" secondItem="Evf-iq-36w" secondAttribute="trailing" id="EIX-wz-VPV"/>
                            <constraint firstItem="Evf-iq-36w" firstAttribute="bottom" secondItem="hGG-v3-hPV" secondAttribute="top" id="GLz-Uc-R4I"/>
                            <constraint firstItem="Evf-iq-36w" firstAttribute="top" secondItem="dmG-2u-2G5" secondAttribute="bottom" id="aVR-gD-rOV"/>
                            <constraint firstItem="Evf-iq-36w" firstAttribute="leading" secondItem="8W2-4z-CNu" secondAttribute="leading" id="ytl-qZ-FsM"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="TV Shows" id="tch-lK-YOL">
                        <barButtonItem key="rightBarButtonItem" systemItem="organize" id="kDd-mQ-CCu">
                            <connections>
                                <action selector="organizeAction:" destination="G93-kW-eQc" id="8L8-b4-WLC"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        <segue destination="wVx-Wm-bVh" kind="show" identifier="showTVShowDetailsFromSearch" id="NUZ-jq-DWU"/>
                        <segue destination="SIe-LV-vPe" kind="show" identifier="showPersonDetailsFromSearch" id="XBv-HI-Onn"/>
                        <segue destination="di8-Zf-MMg" kind="show" identifier="showSeeAllFromSearch" id="AWx-A5-qv7"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="uS0-8J-ETv" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <searchBar contentMode="redraw" placeholder="Search" id="OhY-vt-4Ga">
                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                    <textInputTraits key="textInputTraits" keyboardType="webSearch" returnKeyType="search"/>
                    <connections>
                        <outlet property="delegate" destination="uwc-6F-GSl" id="R8O-aS-ZIM"/>
                    </connections>
...
