...
                var displayType:DisplayType?
                var captionType:CaptionType?
                var showCaption = false
                
                switch sender as! Int {
                case 0:
                    title = "Now Showing"
                    fetchRequest = nowShowingFetchRequest
                    displayType = .Poster
                    captionType = .Title
                case 1:
                    title = "Airing Today"
                    fetchRequest = airingTodayFetchRequest
...
